tests/neg-custom-args/captures/sep-pairs.check
-- Error: tests/neg-custom-args/captures/sep-pairs.scala:15:10 ---------------------------------------------------------
15 |  val r1: Pair[Ref^, Ref^] = mkPair(r0) // error: overlap at r0
   |          ^^^^^^^^^^^^^^^^
   |          Separation failure in value r1's type Pair[Ref^, Ref^²].
   |          One part,  Ref^, hides capabilities  {r0}.
   |          Another part,  Ref^²,  captures capabilities  {r0}.
   |          The two sets overlap at  {r0}.
   |
   |          where:    ^  refers to a root capability classified as Unscoped in the type of value r1
   |                    ^² refers to a root capability classified as Unscoped in the type of value r1
-- Error: tests/neg-custom-args/captures/sep-pairs.scala:13:9 ----------------------------------------------------------
13 |def bad: Pair[Ref^, Ref^] =  // error: overlap at r1*, r0
   |         ^^^^^^^^^^^^^^^^
   |         Separation failure in method bad's result type Pair[Ref^, Ref^²].
   |         One part,  Ref^, hides capabilities  {any, r0}.
   |         Another part,  Ref^²,  captures capabilities  {r0}.
   |         The two sets overlap at  {r0}.
   |
   |         where:    ^   refers to a root capability classified as Unscoped in the result type of method bad
   |                   ^²  refers to a root capability classified as Unscoped in the result type of method bad
   |                   any is a root capability classified as Unscoped in the type of value r1
-- Error: tests/neg-custom-args/captures/sep-pairs.scala:42:21 ---------------------------------------------------------
42 |  val sndSame = same.snd // error after reach drop
   |                ^^^^^^^^
   |Separation failure: Illegal access to {`any` of value same} which is hidden by the previous definition
   |of value fstSame with type Ref^.
   |This type hides capabilities  {any, any²}
   |
   |where:    ^    refers to a root capability classified as Unscoped in the type of value fstSame
   |          any  is a root capability classified as Unscoped in the type of value same
   |          any² is a root capability classified as Unscoped created in value same when instantiating method twoRefs2's type (): SamePair[Ref^{fresh}]
-- Error: tests/neg-custom-args/captures/sep-pairs.scala:43:42 ---------------------------------------------------------
43 |  val sameToPair: Pair[Ref^, Ref^] = Pair(fstSame, sndSame) // error // error after reach drop
   |                                          ^^^^^^^
   |Separation failure: Illegal access to {`any` of value same} which is hidden by the previous definition
   |of value sndSame with type Ref^.
   |This type hides capabilities  {any, any²}
   |
   |where:    ^    refers to a root capability classified as Unscoped in the type of value sndSame
   |          any  is a root capability classified as Unscoped in the type of value same
   |          any² is a root capability classified as Unscoped created in value same when instantiating method twoRefs2's type (): SamePair[Ref^{fresh}]
-- Error: tests/neg-custom-args/captures/sep-pairs.scala:43:18 ---------------------------------------------------------
43 |  val sameToPair: Pair[Ref^, Ref^] = Pair(fstSame, sndSame) // error // error after reach drop
   |                  ^^^^^^^^^^^^^^^^
   |                 Separation failure in value sameToPair's type Pair[Ref^, Ref^²].
   |                 One part,  Ref^, hides capabilities  {fstSame}.
   |                 Another part,  Ref^²,  captures capabilities  {sndSame}.
   |                 The two sets overlap at  {}.
   |
   |                 where:    ^  refers to a root capability classified as Unscoped in the type of value sameToPair
   |                           ^² refers to a root capability classified as Unscoped in the type of value sameToPair
